--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "fortawesome/vue-fontawesome",
     "@nuxt-hero-icons/outline": "^1.0.1",
     "@oruga-ui/oruga-next": "^0.5.5",
     "@rollup/plugin-graphql": "^1.1.0",
